// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match active Testimonial component snapshot 1`] = `
<div>
  <div
    class="testimonial testimonial--active"
    data-testid="Gemma Powell & Max"
  >
    <h3
      class="testimonial__header"
    >
      Gemma Powell & Max
    </h3>
    <div
      class="testimonial__details"
    >
      <p
        class="testimonial__detail"
      >
        <img
          alt="calendar"
          src="calendar.svg"
        />
         
        JAN 2020
      </p>
      <p
        class="testimonial__detail"
      >
        <img
          alt=""
          src="testimonial_course.svg"
        />
         
        LITTLE STARS COURSE
      </p>
    </div>
    <p
      class="testimonial__comment"
    >
      We would just like to say how AMAZING Mel is at The Positive Pup! We have just finished the Rising Stars course and Mel was brilliant. Our black lab Max was an over excitable dog who needed lots of mental stimulation and clear instructions. We have learnt so much and would urge anyone who is looking for dog training to look no further. We are already looking into more courses to keep us and Max on...
      <button
        class="testimonial__comment-button"
      >
        show more
      </button>
    </p>
    <img
      alt="quotation marks"
      class="testimonial__quotations testimonial__quotations--1"
      src="quotations-1.svg"
    />
    <img
      alt="quotation marks"
      class="testimonial__quotations testimonial__quotations--2"
      src="quotations-1.svg"
    />
  </div>
</div>
`;

exports[`should match inactive Testimonial component snapshot 1`] = `
<div>
  <div
    class="testimonial"
    data-testid="Gemma Powell & Max"
  >
    <h3
      class="testimonial__header"
    >
      Gemma Powell & Max
    </h3>
    <div
      class="testimonial__details"
    >
      <p
        class="testimonial__detail"
      >
        <img
          alt="calendar"
          src="calendar.svg"
        />
         
        JAN 2020
      </p>
      <p
        class="testimonial__detail"
      >
        <img
          alt=""
          src="testimonial_course.svg"
        />
         
        LITTLE STARS COURSE
      </p>
    </div>
    <p
      class="testimonial__comment"
    >
      We would just like to say how AMAZING Mel is at The Positive Pup! We have just finished the Rising Stars course and Mel was brilliant. Our black lab Max was an over excitable dog who needed lots of mental stimulation and clear instructions. We have learnt so much and would urge anyone who is looking for dog training to look no further. We are already looking into more courses to keep us and Max on...
      <button
        class="testimonial__comment-button"
      >
        show more
      </button>
    </p>
    <img
      alt="quotation marks"
      class="testimonial__quotations testimonial__quotations--1"
      src="quotations-1.svg"
    />
    <img
      alt="quotation marks"
      class="testimonial__quotations testimonial__quotations--2"
      src="quotations-1.svg"
    />
  </div>
</div>
`;
